deployment/3-networking/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
spec:
  selector:
    app: weather-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
